add describetion in main

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello this is Main page!</h1>
+    <h1>Hello this is Main page!!</h1>
+    <p>Add desc</p>
 </body>
 </html>
