--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello this is Main page!!</h1>
-    <p>This is BTB class</p>
-    <p>This is BTB class</p>
+    <h1>Hello this is Reksmey page!!</h1>
+    <p>From BTB class</p>
 </body>
 </html>
